# pygraphic

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: publish.yml  python-package.yml  python-publish.yml  test.yml
example/: get_all_users.py  main.py
example/server/: __init__.py  schema.py
examples/: arguments.py  inline_fragments.py  queries.py  server.py  variables.py
examples/basic_query/: get_all_users.py  main.py
examples/github_unions/: main.py
examples/minimal_query/: get_all_users.py  main.py
examples/parametrized_query/: get_users_born_after.py  main.py
examples/required_parametrized_query/: get_user.py  main.py
examples/server/: schema.py
golden_files/: example_arguments.gql  example_inline_fragments.gql  example_queries.gql  example_variables.gql  query_basic.gql  query_get_all_users.gql  query_parametrized.gql  query_parametrized_required.gql  query_unnamed.gql  server_schema.gql
pygraphic/: __init__.py  _gql_parameters.py  _gql_query.py  _gql_type.py  _gql_variables.py  _scalars.py  _utils.py  gql_query.py  gql_type.py  serializers.py  types.py
scripts/: generate_golden_server_schema.py
tests/: conftest.py  expected_query.gql  get_all_users.py  test_arguments.py  test_basic_query.py  test_case_conversion.py  test_custom_scalar_types.py  test_enumeration_types.py  test_examples.py  test_fields.py  test_inline_fragments.py  test_minimal_query.py  test_operation_name.py  test_parametrized_query.py  test_queries.py  test_query_generation.py  test_required_parametrized_query.py  test_serializers.py  test_server.py  test_server_interaction.py  test_types.py  test_variables.py
tests/golden/: query_get_all_users.gql  query_unnamed.gql
tests/server/: schema.py  test_server.py
